[project]
name = "vse-sim"
version = "0.1.0"
description = "Voter Satisfaction Efficiency simulation tools"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.23,<2",
    "scipy>=1.9,<1.12",
]

[dependency-groups]
dev = [
    "pytest>=7,<9",
]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["."]
